registry/ingress-registry.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    creationTimestamp: "2022-03-30T13:48:25Z"
    generation: 1
    name: registry
    namespace: container-registry
    resourceVersion: "483916"
    selfLink: /apis/networking.k8s.io/v1/namespaces/container-registry/ingresses/registry
    uid: 8bfed7ae-27ff-458d-b556-01f2dbe46af3
  spec:
    ingressClassName: nginx
    rules:
    - host: registry-10-1-1-20.traefik.me
      http:
        paths:
        - backend:
            service:
              name: registry
              port:
                number: 5000
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.1.1.20
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
